<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".Registro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:alpha="0.0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:src="@drawable/mundo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageone"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/teal_200"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="31dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_with_your_data"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:layout_gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/person_icon"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_email_hint"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/email_icon"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_password"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_confirm_Password"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Confirmar_Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/segurity_icon"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cell_Phone"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/cell_icon"
                android:inputType="text|number"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_Register"
                app:cornerRadius="32dp"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or_login_with"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:alpha="0.7"/>


            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">


               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/google"
                   tools:ignore="ContentDescription" />

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/facebook"
                   tools:ignore="ContentDescription" />

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/x"
                   tools:ignore="ContentDescription" />

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_margin="12dp"
                   android:background="@drawable/github"
                   tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textViewIniciarSeción"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:textColor="@color/teal_700"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    tools:ignore="ObsoleteLayoutParam,TextContrastCheck" />

           </LinearLayout>

       </LinearLayout>

   </androidx.cardview.widget.CardView>

</RelativeLayout>
