<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisajethree"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_secondary"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/mundo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messagetwo"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailIngreser"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordRecuperate"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:layout_gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_email_hint"
                android:textColor="@color/black"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/recoverEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/email_icon"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recuperarbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/retrieve"
                app:cornerRadius="32dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/recedeLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:textColor="@color/teal_700"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    tools:ignore="ObsoleteLayoutParam,TextContrastCheck,VisualLintBounds" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>